Fixed Route Planner numeral z-index conflict with navbar

--- a/application/public/css/planner.css
+++ b/application/public/css/planner.css
@@ -140,7 +140,6 @@ header {
     vertical-align: middle;
     align-self: center;
     background-color: white;
-    position: relative;
     border-radius: 50%;
     border-style: solid;
     border-width: 1px;
